# Graphsage

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: model_config.yaml
data/demo/: demo_transactions.json
docs/: system_walkthrough.md
docs/integration/: graph_api_contract.md
examples/api_responses/: critical_fraud_hub_and_spoke.json  medium_risk_ambiguous.json  subgraph_demo.json
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_graph_construction.ipynb  04_train_baseline.ipynb  05_train_edge_mlp.ipynb  06_train_full.ipynb  07_evaluation_ablation.ipynb  demo.ipynb  demo_colab.ipynb  train_colab.ipynb
reports/: ablation_tuned.json  eda_findings.md  stage1_metrics.json  stage2_metrics.json  stage3_metrics.json  stage3a_metrics.json
scripts/: build_graph.py  build_temporal_graph.py  calibration_study.py  demo_extract_subgraph.py  download_paysim.py  eval_statistics.py  eval_with_tuned_threshold.py  make_demo_dataset.py  make_splits.py  prepare_features.py  serve_api.py  train_baseline.py  train_edge_mlp.py  train_focal.py  train_full.py  train_temporal.py
src/graphsage/: __init__.py
src/graphsage/api/: __init__.py  app.py  schemas.py
src/graphsage/data/: __init__.py  features.py  graph_builder.py  ingestion.py  splits.py  temporal.py
src/graphsage/extraction/: __init__.py  pattern_classifier.py  subgraph.py
src/graphsage/inference/: __init__.py  predictor.py
src/graphsage/models/: __init__.py  baseline.py  edge_sage.py  layers.py
src/graphsage/sampling/: __init__.py  (+1 more)
tests/: __init__.py  test_api.py  test_subgraph.py
(+8 files in other folders)
